kubernetes/raspberry-pi/monitoring/jaeger/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one
          ports:
            - containerPort: 5775
              protocol: UDP
              name: agent
            - containerPort: 6831
              protocol: UDP
              name: agent-zipkin
            - containerPort: 6832
              protocol: UDP
              name: agent-compact
            - containerPort: 5778
              protocol: TCP
              name: collector
            - containerPort: 16686
              protocol: TCP
              name: web
            - containerPort: 14268
              protocol: TCP
              name: query
            - containerPort: 9411
              protocol: TCP
              name: zipkin
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: tracing
              mountPath: /tracing
