kubernetes/raspberry-pi/monitoring/jaeger/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - name: agent
      protocol: UDP
      port: 5775
    - name: agent-zipkin
      protocol: UDP
      port: 6831
    - name: agent-compact
      protocol: UDP
      port: 6832
    - name: collector
      protocol: TCP
      port: 5778
    - name: web
      protocol: TCP
      port: 16686
    - name: query
      protocol: TCP
      port: 14268
    - name: zipkin
      protocol: TCP
      port: 9411
